--- a/dataviz.qmd
+++ b/dataviz.qmd
@@ -47,7 +47,11 @@ The following is a list of some TidyTuesday projects I’ve completed. While I d
 Here is the [**official TidyTuesday repo**](https://github.com/rfordatascience/tidytuesday)
 
 ### September '25
--   **September 9, 2024** <a href="tidytuesday/henley_passport.qmd" class="chip-link">International Visa Requirments 🛂🌐</a>
+-   **September 9, 2024** <a href="tidytuesday/henley_passport.qmd" class="chip-link">International Visa Requirments 🛂✈️</a>
+-   **September 2, 2024** <a href="tidytuesday/australian_frogs.qmd" class="chip-link">International Visa Requirments 🇦🇺🐸</a>
+
+### July '25
+-   **July 29, 2024** <a href="tidytuesday/netflix.qmd" class="chip-link">Netflix Catalog 🎬🍿️</a>
 
 ### December '24
 
